--- a/product.html
+++ b/product.html
@@ -1,89 +1,80 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar商品細項</title>
-    <link rel="stylesheet" href="css/product.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
-    <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Elqamar | 商品詳情</title>
+  <link rel="stylesheet" href="css/product.css" />
+  <link rel="stylesheet" href="css/toast.css" /> 
 </head>
 <body>
-    <header class="navbar">
-        <div class="navbar-left">
-            <a href="index.html" class="logo">Elqamar</a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">首頁</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="idv.html">第五人格</a>
-                            <a href="#"></a>
-                            <a href="#"></a>
-                        </div>
-                    </li>
-                    <li><a href="spot.html">現貨商品</a></li>
-                    <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="qa.html">Q&A</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="navbar-right">
-            <a href="cart.html" class="icon-link cart-icon-wrapper">
-                <img src="images/cart.png" alt="購物車">
-                <span class="cart-count">0</span>
-            </a>
-            <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link"><img src="images/ig.png" alt="IG"></a>
-            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link"><img src="images/fb.png" alt="FB"></a>
-        </div>
-    </header>
+  <div class="content-wrapper">
+        <header class="navbar">
+            <div class="container">
+                <div class="nav-left">
+                    <a href="index.html" class="logo">Elqamar</a>
+                    <nav class="nav-links">
+                        <ul>
+                            <li><a href="index.html">首頁</a></li>
+                            <li>
+                                <a href="" class="dropdown-toggle">預購商品▼</a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="idv.html">第五人格</a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="spot.html">現貨商品</a></li>                                 
+                            <li><a href="notice.html">交易須知</a></li>
+                            <li><a href="qa.html">常見問題</a></li>
+                        </ul>
+                    </nav>
+                </div>
 
-    <section class="product-detail">
-        <div class="product-wrapper">
-            <div class="product-image">
-                <img id="product-img" src="" alt="商品圖片">
-            </div>
+                <div class="nav-icons-wrapper">
+                    <div class="nav-right">                        
+                        <a href="cart.html" class="cart-icon">
+                            <img src="images/cart.png" alt="購物車" />
+                            <span class="cart-badge">0</span>
+                        </a>
 
-            <div class="product-info">
-                <h1 id="product-name">商品名稱</h1>
-                <p id="product-price" class="price">價格：$</p>
-
-                <div class="product-options">
-                    <div class="quantity-and-favorite">
-                        <label for="quantity-select">數量：</label>
-                        <select id="quantity-select" class="quantity-select">
-                        <!-- 數量選項將由 JS 動態插入 -->
-                        </select>
-
+                        <a href="https://www.instagram.com/elqamar.ovo/" target="_blank" class="icon-link" aria-label="Instagram">
+                            <img src="images/ig.png" alt="Instagram" />
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank" class="icon-link" aria-label="Facebook">
+                            <img src="images/fb.png" alt="Facebook" />
+                        </a>
                     </div>
-                    <button id="add-to-cart-btn" class="btn add-to-cart-btn">加入購物車</button>
-                </div>
 
-                <hr class="section-divider">
-
-                <div class="product-description">
-                    <h2>商品說明</h2>
-                    <p id="product-description">這是商品的詳細描述。</p>
+                    <button class="hamburger" aria-label="Toggle navigation">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </button>
                 </div>
             </div>
-        </section>
+        </header>
 
+        <div class="container">
+          <div id="productDetail" class="product-detail-container"></div>
+        </div>
+    </div>
+    
     <footer class="footer">
-        <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-                <img src="images/ig.png" alt="IG">
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-                <img src="images/fb.png" alt="FB">
-            </a></p>
+        <div class="container">
+            <div class="footer-primary">
+                <p>&copy; Elqamar ｜聯絡我們：</p>
+                <div class="footer-social-icons">
+                    <a href="https://www.instagram.com/elqamar.ovo/" target="_blank"><img src="images/ig.png" alt="IG" /></a>
+                    <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank"><img src="images/fb.png" alt="FB" /></a>
+                </div>
+            </div>
+            <div class="footer-links-text">
+                </div>
+        </div>
     </footer>
 
-    <!-- 提示框 -->
-    <div id="toast-notification" class="toast-notification"></div>
-
-    <script src="js/allProductsData.js"></script>
-    <script src="js/cart-count.js"></script>
-    <script src="js/product.js"></script>
-    </body>
+  <script src="js/allProductsData.js"></script>
+  <script src="js/product.js"></script>
+</body>
 </html>
