--- a/cart.html
+++ b/cart.html
@@ -1,75 +1,100 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Elqamar—購物車</title>
-  <link rel="stylesheet" href="css/cart.css" />
-  <link rel="stylesheet" href="css/common.css" />
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Elqamar | 購物車</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/cart.css" /> </head>
 <body>
-  <header class="navbar">
-    <div class="navbar-left">
-      <a href="index.html" class="logo">Elqamar</a>
-      <nav>
-        <ul>
-          <li><a href="index.html">首頁</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-            <div class="dropdown-content">
-              <a href="idv.html">第五人格</a>
-              <a href="#"></a>
-              <a href="#"></a>
+    <div class="content-wrapper">
+        <header class="navbar">
+            <div class="container">
+                <div class="nav-left">
+                    <a href="index.html" class="logo">Elqamar</a>
+                    <nav class="nav-links">
+                        <ul>
+                            <li><a href="index.html">首頁</a></li>
+                            <li>
+                                <a href="" class="dropdown-toggle">預購商品▼</a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="idv.html">第五人格</a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="spot.html">現貨商品</a></li>
+                            <li><a href="notice.html">交易須知</a></li>
+                            <li><a href="qa.html">常見問題</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="nav-icons-wrapper">
+                    <div class="nav-right">                
+                        <a href="cart.html" class="cart-icon">
+                            <img src="images/cart.png" alt="購物車" />
+                            <span class="cart-badge">0</span>
+                        </a>
+
+                        <a href="https://www.instagram.com/elqamar.ovo/" target="_blank" class="icon-link" aria-label="Instagram">
+                            <img src="images/ig.png" alt="Instagram" />
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank" class="icon-link" aria-label="Facebook">
+                            <img src="images/fb.png" alt="Facebook" />
+                        </a>
+                    </div>
+
+                    <button class="hamburger" aria-label="Toggle navigation">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </button>
+                </div>
             </div>
-          </li>
-          <li><a href="spot.html">現貨商品</a></li>
-          <li><a href="notice.html">交易須知</a></li>
-          <li><a href="qa.html">Q&A</a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="navbar-right">
-      <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link"><img src="images/ig.png" alt="IG"></a>
-      <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link"><img src="images/fb.png" alt="FB"></a>
-    </div>
-  </header>
+        </header>
 
-  <section class="cart-section">
-    <h2>此為試算處</h2>
-    <div class="cart-container">
-      <table class="cart-table">
-        <thead>
-          <tr>
-            <th>商品</th>
-            <th>單價</th>
-            <th>數量</th>
-            <th>小計</th>
-            <th>操作</th>
-          </tr>
-        </thead>
-        <tbody class="cart-tbody">
-          </tbody>
-      </table>
+        <main class="container main-content">
+            <h1>此處僅供試算，如需購買，請透過 IG 或 FB 私訊與我們聯繫</h1>
+            <div class="cart-section-container">
+              <div class="cart-content-wrapper">
+                  <div class="cart-header">
+                      <div class="cart-header-item product-col">商品</div>
+                      <div class="cart-header-item">單價</div>
+                      <div class="cart-header-item">數量</div>
+                      <div class="cart-header-item">小計</div>
+                      <div class="cart-header-item">操作</div>
+                  </div>
+                  <div id="cartItems">
+                      </div>
+              </div>
 
-      <div class="cart-summary">
-        <p>總計：<span class="total-price">$0</span></p>
-        <button class="btn checkout-btn">前往結帳</button>
-      </div>
+              <div class="cart-summary-wrapper">
+                  <div class="cart-summary">
+                      <p>總金額: $<span id="cartTotal">0</span></p>
+                      <!-- <button class="checkout-btn">前往結帳</button> -->
+                  </div>
+              </div>
+          </div>
+        </main>
     </div>
-  </section>
 
-  <footer class="footer">
-        <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-                <img src="images/ig.png" alt="IG">
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-                <img src="images/fb.png" alt="FB">
-            </a></p>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-primary">
+                <p>&copy; Elqamar ｜聯絡我們：</p>
+                <div class="footer-social-icons">
+                    <a href="https://www.instagram.com/elqamar.ovo/" target="_blank"><img src="images/ig.png" alt="IG" /></a>
+                    <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank"><img src="images/fb.png" alt="FB" /></a>
+                </div>
+            </div>
+            <div class="footer-links-text">
+                </div>
+        </div>
     </footer>
 
-  <div id="toast-notification" class="toast-notification"></div>
-
-  <script src="js/allProductsData.js"></script>
-  <script src="js/cart.js"></script>
+    <script src="js/allProductsData.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html>
