--- a/qa.html
+++ b/qa.html
@@ -1,133 +1,131 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar—Q&A</title>
-    <link rel="stylesheet" href="css/qa.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
-    <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Elqamar | 常見問題</title>
+    <link rel="stylesheet" href="css/qa.css" />
 </head>
 <body>
-    <header class="navbar">
-        <div class="navbar-left">
-            <a href="index.html" class="logo">Elqamar</a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">首頁</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="idv.html">第五人格</a>
-                            <a href="#"></a>
-                            <a href="#"></a>
+    <div class="content-wrapper">
+        <header class="navbar">
+            <div class="container">
+                <div class="nav-left">
+                    <a href="index.html" class="logo">Elqamar</a>
+                    <nav class="nav-links">
+                        <ul>
+                            <li><a href="index.html">首頁</a></li>
+                            <li>
+                                <a href="" class="dropdown-toggle">預購商品▼</a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="idv.html">第五人格</a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="spot.html">現貨商品</a></li>                            
+                            <li><a href="notice.html">交易須知</a></li>
+                            <li><a href="qa.html">常見問題</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="nav-icons-wrapper">
+                    <div class="nav-right">                        
+                        <!-- 購物車圖示 -->
+                        <a href="cart.html" class="cart-icon">
+                            <img src="images/cart.png" alt="購物車" />
+                            <span class="cart-badge">0</span>
+                        </a>
+
+
+                        <a href="https://www.instagram.com/elqamar.ovo/" target="_blank" class="icon-link" aria-label="Instagram">
+                            <img src="images/ig.png" alt="Instagram" />
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank" class="icon-link" aria-label="Facebook">
+                            <img src="images/fb.png" alt="Facebook" />
+                        </a>
+                    </div>
+
+                    <button class="hamburger" aria-label="Toggle navigation">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </button>
+                </div>
+            </div>
+        </header>
+
+        <div class="container main-content">
+            <section class="product-section">
+                <section class="faq-contact-wrapper">
+                    <div class="faq-section">
+                        <h2>常見問題</h2>
+                        <div class="accordion">
+                        <div class="accordion-item">
+                            <button class="accordion-button">Q1：如何下單？</button>
+                            <div class="accordion-content">
+                            <p>本網站僅提供商品本體價格的查詢與試算功能，實際購買請透過右上角的社群軟體與我們聯繫確認。</p>
+                            </div>
                         </div>
-                    </li>
-                    <li><a href="spot.html">現貨商品</a></li>
-                    <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="qa.html">Q&A</a></li> </ul>
-            </nav>
+                        <div class="accordion-item">
+                            <button class="accordion-button">Q2：付款方式有哪些？</button>
+                            <div class="accordion-content">
+                            <p>我們目前支援轉帳、空包、以及超商代碼繳費等，現貨可直接私訊連結下單。詳情請見交易須知頁面。</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="accordion-button">Q3：出貨時間需要多久？</button>
+                            <div class="accordion-content">
+                            <p>💙預購商品的出貨時間依據供應商到貨時間而定<br>💛現貨商品確認訂單後會安排寄出：<br>「好賣家」寄送：當天可出貨。<br>「賣貨便或郵局」寄送：一週內出貨。</p>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <button class="accordion-button">Q4：可以修改或取消訂單嗎？</button>
+                            <div class="accordion-content">
+                            <p>預購商品及限時開團收款後就不可取消，現貨商品還沒出貨前告知即可取消。</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+
+                    <section class="contact-section">
+                        <h2>聯絡我們</h2>
+                        <p>如果您在常見問題中找不到答案，或有其他任何疑問，歡迎透過以下方式聯繫我們，我們會盡快回覆您。</p>
+                        <ul class="contact-list with-icons">                          
+                            <img src="images/line.png" alt="LINE" class="contact-icon" />
+                            <a href="https://line.me/ti/g2/qLAM1oBz8dpxeKXxPokjT1Xn9q96j0ghlNfODg?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" target="_blank"><strong>Elqamar</strong></a>                          
+                            <a>　　</a>
+                            <img src="images/instagram.png" alt="Instagram" class="contact-icon" />
+                            <a href="https://www.instagram.com/elqamar.ovo/" target="_blank"><strong>Elqamar.ovo</strong></a>  
+                            <a>　　</a>                         
+                            <img src="images/facebook.png" alt="Facebook" class="contact-icon" />
+                            <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank"><strong>Elqamar</strong></a>
+                        </ul>
+                        </section>
+
+                    </section>
+
+            </section>
         </div>
-        <div class="navbar-right">
-            <a href="cart.html" class="icon-link cart-icon-wrapper">
-                <img src="images/cart.png" alt="購物車">
-                <span class="cart-count">0</span>
-            </a>
-            <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-                <img src="images/ig.png" alt="IG">
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-                <img src="images/fb.png" alt="FB">
-            </a>
-        </div>
-    </header>
-
-    <main class="qa-container">
-        <h1>常見問題與聯絡我們</h1>
-
-        <section class="faq-section">
-            <h2>常見問題 (FAQ)</h2>
-            <div class="accordion">
-                <div class="accordion-item">
-                    <button class="accordion-header">
-                        Q1: 如何下單？
-                        <span class="accordion-icon">&#9660;</span> </button>
-                    <div class="accordion-content">
-                        <p>本網站僅提供商品本體價格的查詢與試算功能，實際購買請透過右上角的社群軟體與我們聯繫確認。</p>
-                    </div>
-                </div>
-
-                <div class="accordion-item">
-                    <button class="accordion-header">
-                        Q2: 付款方式有哪些？
-                        <span class="accordion-icon">&#9660;</span>
-                    </button>
-                    <div class="accordion-content">
-                        <p>我們目前支援銀行轉帳、空包、以及超商代碼繳費等，現貨可直接私訊連結下單。詳情請見交易須知頁面。</p>
-                    </div>
-                </div>
-
-                <div class="accordion-item">
-                    <button class="accordion-header">
-                        Q3: 出貨時間需要多久？
-                        <span class="accordion-icon">&#9660;</span>
-                    </button>
-                    <div class="accordion-content">
-                        <p>1️⃣預購商品的出貨時間依據供應商到貨時間而定<br>2️⃣現貨商品確認訂單後會安排寄出：<br>「好賣家」寄送：當天可出貨。<br>「賣貨便或郵局」寄送：一週內出貨。</p>
-                    </div>
-                </div>
-
-                <div class="accordion-item">
-                    <button class="accordion-header">
-                        Q4: 可以修改或取消訂單嗎？
-                        <span class="accordion-icon">&#9660;</span>
-                    </button>
-                    <div class="accordion-content">
-                        <p>預購商品及限時開團收款後就不可取消，現貨商品還沒出貨前告知即可取消。</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <hr class="section-divider">
-
-        <section class="contact-us-section">
-            <h2>聯絡我們</h2>
-            <p>如果您在常見問題中找不到答案，或有其他任何疑問，歡迎透過以下方式聯繫我們，我們會盡快回覆您。</p>
-
-            <div class="contact-methods">
-                <p><strong>LINE社群：</strong></p>
-                <div class="social-links">
-                    <a href="https://line.me/ti/g2/qLAM1oBz8dpxeKXxPokjT1Xn9q96j0ghlNfODg?utm_source=invitation&utm_medium=link_copy&utm_campaign=default" class="icon-link">
-                        <img src="images/line.png" alt="LINE"> Elqamar
-                    </a>
-                </div>
-                <p><strong>社群媒體：</strong></p>
-                <div class="social-links">
-                    <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-                        <img src="images/instagram.png" alt="Instagram"> Elqamar.ovo
-                    </a>
-                    <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-                        <img src="images/facebook.png" alt="Facebook"> Elqamar
-                    </a>
-                </div>
-            </div>
-        </section>
-    </main>
+    </div>
 
     <footer class="footer">
-        <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-                <img src="images/ig.png" alt="IG">
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-                <img src="images/fb.png" alt="FB">
-            </a></p>
+        <div class="container">
+            <div class="footer-primary">
+                <p>&copy; Elqamar ｜聯絡我們：</p>
+                <div class="footer-social-icons">
+                    <a href="https://www.instagram.com/elqamar.ovo/" target="_blank"><img src="images/ig.png" alt="IG" /></a>
+                    <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank"><img src="images/fb.png" alt="FB" /></a>
+                </div>
+            </div>
+            <div class="footer-links-text">
+                <!-- <a href="#privacy">隱私政策</a> -->
+            </div>
+        </div>
     </footer>
 
-    <div id="toast-notification" class="toast-notification"></div>
-
-    <script src="js/cart-count.js"></script>
+    <script src="js/allProductsData.js"></script>
     <script src="js/qa.js"></script>
 </body>
 </html>
