--- a/spot.html
+++ b/spot.html
@@ -1,76 +1,93 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elqamar—現貨商品</title>
-    <link rel="stylesheet" href="css/product.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
-    <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Elqamar | 現貨商品</title>
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-    <header class="navbar">
-        <div class="navbar-left">
-            <a href="index.html" class="logo">Elqamar</a>
-            <nav>
-                <ul>
-                    <li><a href="index.html">首頁</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropbtn">預購商品 <i class="arrow down"></i></a>
-                        <div class="dropdown-content">
-                            <a href="idv.html">第五人格</a>
-                            <a href="#"></a>
-                            <a href="#"></a>
+    <div class="content-wrapper">
+        <header class="navbar">
+            <div class="container">
+                <div class="nav-left">
+                    <a href="index.html" class="logo">Elqamar</a>
+                    <nav class="nav-links">
+                        <ul>
+                            <li><a href="index.html">首頁</a></li>
+                            <li>
+                                <a href="" class="dropdown-toggle">預購商品▼</a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="idv.html">第五人格</a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                </ul>
+                            </li>
+                            <li><a href="spot.html">現貨商品</a></li>                            
+                            <li><a href="notice.html">交易須知</a></li>
+                            <li><a href="qa.html">常見問題</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="nav-icons-wrapper">
+                    <div class="nav-right">
+                        <button class="icon-button search-toggle" aria-label="搜尋">
+                            <img src="images/search.png" alt="搜尋" />
+                        </button>
+
+                        <div class="search-container hidden">
+                            <input type="text" class="search-input" placeholder="請輸入關鍵字..." />
+                            <button class="search-confirm">確認</button>
+                            <ul class="suggestion-list hidden"></ul>
                         </div>
-                    </li>
-                    <li><a href="">現貨商品</a></li>
-                    <li><a href="notice.html">交易須知</a></li>
-                    <li><a href="qa.html">Q&A</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="navbar-right">
-            <div class="search-container">
-                <input type="text" class="search-input hidden" placeholder="搜尋商品...">
-                <a href="#" class="icon-link search-toggle"><img src="images/search.png" alt="搜尋"></a>
+                        <!-- 購物車圖示 -->
+                        <a href="cart.html" class="cart-icon">
+                            <img src="images/cart.png" alt="購物車" />
+                            <span class="cart-badge">0</span>
+                        </a>
+
+                        <a href="https://www.instagram.com/elqamar.ovo/" target="_blank" class="icon-link" aria-label="Instagram">
+                            <img src="images/ig.png" alt="Instagram" />
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank" class="icon-link" aria-label="Facebook">
+                            <img src="images/fb.png" alt="Facebook" />
+                        </a>
+                    </div>
+
+                    <button class="hamburger" aria-label="Toggle navigation">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </button>
+                </div>
             </div>
-            <a href="cart.html" class="icon-link cart-icon-wrapper">
-                <img src="images/cart.png" alt="購物車">
-                <span class="cart-count">0</span>
-            <!-- 小紅點會自動插入這裡 -->
-            </a>
+        </header>
 
-            <a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-                <img src="images/ig.png" alt="IG">
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-                <img src="images/fb.png" alt="FB">
-            </a>
-        </div>
-    </header>
-    
-
-    <section class="product-section">
-        <h2>現貨商品</h2> 
-        <div class="product-grid"></div>
-    </section>
-
-    <div class="pagination"></div>
+        <section class="product-section">
+            <div class="product-group">
+                <h2 id="productSectionTitle" class="section-title">預購商品-第五人格</h2>
+                <div class="product-list product-row" id="productList"></div>
+            </div>
+        </section>
+    </div>
 
     <footer class="footer">
-        <p>&copy; Elqamar ｜聯絡我們：<a href="https://www.instagram.com/elqamar.ovo/" class="icon-link">
-                <img src="images/ig.png" alt="IG">
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=61577311714295" class="icon-link">
-                <img src="images/fb.png" alt="FB">
-            </a></p>
+        <div class="container">
+            <div class="footer-primary">
+                <p>&copy; Elqamar ｜聯絡我們：</p>
+                <div class="footer-social-icons">
+                    <a href="https://www.instagram.com/elqamar.ovo/" target="_blank"><img src="images/ig.png" alt="IG" /></a>
+                    <a href="https://www.facebook.com/profile.php?id=61577311714295" target="_blank"><img src="images/fb.png" alt="FB" /></a>
+                </div>
+            </div>
+            <div class="footer-links-text">
+                <!-- <a href="#privacy">隱私政策</a> -->
+            </div>
+        </div>
     </footer>
 
-    <div id="toast-notification" class="toast-notification"></div>
-    
     <script src="js/allProductsData.js"></script>
-    <script src="js/cart-count.js"></script>
     <script src="js/spot.js"></script>
 </body>
 </html>
