--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Elqamar | 購物車</title>
+    <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
+    <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/cart.css" /> </head>
 <body>
