--- a/qa.html
+++ b/qa.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Elqamar | 常見問題</title>
+    <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
+    <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
     <link rel="stylesheet" href="css/qa.css" />
 </head>
 <body>
