--- a/spot.html
+++ b/spot.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Elqamar | 現貨商品</title>
-    <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
-    <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
     <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
@@ -21,8 +19,8 @@
                                 <a href="" class="dropdown-toggle">預購商品▼</a>
                                 <ul class="dropdown-menu">
                                     <li><a href="idv.html">第五人格</a></li>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
+                                    <!-- <li><a href=""></a></li>
+                                    <li><a href=""></a></li> -->
                                 </ul>
                             </li>
                             <li><a href="spot.html">現貨商品</a></li>                            
