--- a/notice.html
+++ b/notice.html
@@ -89,6 +89,7 @@
                         <h3></h3>
                         ● 未成年交易視為監護人同意<br>● 客製化服務為代買，無法保證真偽，請自行評估風險與責任<br>● 不與黑灰單交易<br>● 視情況進行二補（尾款補繳）<br>
                         <p style="color: red;">● 除寄錯/少寄外，售後不退，請確認清楚再購買</p>● 物品需一段時間等待<br><p style="color: red;">● 商品皆默認存在初傷及運送損傷</p>
+                        <b style="color: red;">● 本站所提供之商品圖片、價格與說明僅供參考，可能因拍攝角度或螢幕顯示有所差異，請以實品為準。本站不保證所有內容及時更新，如有疑問，歡迎聯繫確認</b>
                         </div>
                     </div>
 
