--- a/product.html
+++ b/product.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="16x25" href="images/LOGO.png">
   <link rel="icon" type="image/png" sizes="32x40" href="images/LOGO.png">
   <link rel="stylesheet" href="css/product.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
   <div class="content-wrapper">
